--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,9 @@ envlist = py27,py32,py33,py34,pypy
 
 [testenv]
 deps = coverage
+       py27: unittest2
+       py27: mock
 commands = coverage erase
            coverage run run_tests.py
-           coverage report --show-missing --include=jeni.py,test_jeni*.py
+           coverage report --show-missing --include=jeni*.py,test_jeni*.py
            coverage erase
